--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "api-for laundry-service",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shrinivasa kr ,dyapa harishwar reddy ,jigyasha rani",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
